k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-api
spec:
  selector:
    app: python-api                                               
  type: ClusterIP #ClusterIP for stage 3 to move from NodePort to ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      #nodePort: 30080 #remove this to move from NodePort to ClusterIP
